# colorizer

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  dataloader.py  deploy_tg_bot.py  pyproject.toml  train.py  trainig_visual.ipynb  training_visual.ipynb
.dvc/: config
.github/workflows/: test.yml
checkpoints/: baseline.dvc
datasets/: .gitignore  coco_2017_test.dvc  imagenet_classes.dvc
datasets/utils/: imagenet_sample_saver.py
losses/: __init__.py  gan_loss.py  huber.py  l_norms.py
models/: __init__.py  gan_descriminator.py  unet_gan_wrap.py  unet_model.py  unet_parts.py
report/: literature.bib  report.tex  sbc-template.bib  sbc-template.tex
trainer/: trainer.py
utils/: __init__.py  dataloader.py  imagenet_sample_saver.py  loggers.py
