[project]
name = "colorizer"
version = "0.1.0"
description = ""
authors = [
    {name = "Denis Bakin", email = "denis.bakin5@gmail.com"},
    {name = "Vitaliy Babanskiy"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch (>=2.6.0,<3.0.0)",
    "numpy (>=2.2.3,<3.0.0)",
    "pre-commit (>=4.1.0,<5.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "torchvision (>=0.21.0,<0.22.0)",
    "opencv-contrib-python (>=4.11.0.86,<5.0.0.0)",
    "albumentations (>=2.0.4,<3.0.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "wandb (>=0.19.8,<0.20.0)",
    "torchsummary (>=1.5.1,<2.0.0)",
    "fastai (>=2.7.19,<3.0.0)",
    "boto3 (>=1.37.32,<2.0.0)",
    "lpips (>=0.1.4,<0.2.0)",
    "python-telegram-bot (>=22.1,<23.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["I", "F", "E"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
